# csharp_like_file

./: LICENSE  README.md
csharp_like_file/: build_and_upload.ps1  pyproject.toml
csharp_like_file/csdir/: __init__.py  __init__.pyi
csharp_like_file/csfile/: __init__.py
csharp_like_file/tests/: notest.py
